--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<TITLE>
 			Museo foto
 		</TITLE>
+               <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
 	</HEAD>
 	<BODY>
 		<H1 ALIGN=CENTER>Museo Foto di Cristiano</H1>
