--- a/seconda.html
+++ b/seconda.html
@@ -21,7 +21,7 @@
 		<a href =https://it.wikipedia.org/wiki/Vaporwave>
             <img src = pater.jpeg>
         </a>
-		<a href = "sito museo 1.html">
+		<a href = "https://devpisgeom.github.io">
 			<br> Torna alla lista quadri
 		</a>
 	</body>
