--- a/terza.html
+++ b/terza.html
@@ -22,7 +22,7 @@
 		<a href =https://it.wikipedia.org/wiki/Vaporwave>
             <img src = broken.jpeg>
         </a>
-		<a href = "sito museo 1.html">
+		<a href = "https://devpisgeom.github.io/">
 			<br> Torna alla lista quadri
 		</a>
 	</body>
