--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
 			<LI> <A HREF=seconda.html> "Shadow Traveller" </A></li>
 			<LI> <A HREF=terza.html> broken reality, endless possibilities </A></li>
 		</UL>
+		<P>
+			<a href="mailto:cristiano.giochi81@gmail.com">
+			contattatemi qui:</a>
+		</P>
 	</BODY>
 </HTML>
